[package]
name = "JGLauncher"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[dependencies]
libloading="0.7"
jni-sys="0.3"
java-locator="0.1"
jni = { version = "0.21" , features = ["invocation"]}
#jni = { path = "vendor/jni" , features = ["invocation"]}
ring = "0.17.8"
aes = "0.8.4"
block-modes = "0.9.1"
clap = "4.5"
zip = "2.2"
sha2 = "0.10"
hex = "0.4"
rvmti= { path = "lib/rvmti" }
base64 = "0.22.1"
lazy_static="1.5.0"
#file-lock = "2.1"
jvmti-jni-wrapper={path = "lib/jvmti-jni-wrapper"}

[build-dependencies]
rand="0.8.5"
#sha2 = "0.10"
#hex = "0.4"